[package]
name = "peers_updater"
version = "0.2.0"
edition = "2021"
authors = ["YggUser (https://matrix.to/#/@ygguser:matrix.org)"]
readme = "README.md"
repository = "https://github.com/ygguser/peers_updater"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", default-features = false, features = [
    "suggestions",
    "usage",
    "help",
    "std",
] }
nu-json = { version = "0.76.0", default-features = false }
regex = { version = "1.7.1", default-features = false, features = ["std"] }
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }
tinyget = { version = "1.0.1", default-features = false, features = ["https"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
