[package]
name = "peers_updater"
version = "0.3.3"
edition = "2021"
authors = ["YggUser (https://matrix.to/#/@ygguser:matrix.org)"]
readme = "README.md"
repository = "https://github.com/ygguser/peers_updater"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", default-features = false, features = [
    "suggestions",
    "usage",
    "help",
    "std",
] }
nu-json = { version = "0.84.0", default-features = false, optional = true }
regex = { version = "1.7.1", default-features = false, features = ["std"] }
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
minreq = { version = "2.6.0", default-features = false, features = [
    "https-native",
] }

[target.'cfg(unix)'.dependencies]
minreq = { version = "2.6.0", default-features = false, features = ["https"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["updating_cfg", "using_api", "self_updating"]
updating_cfg = []
using_api = ["dep:nu-json"]
self_updating = ["dep:nu-json"]
